...
    <string name="email_login">Email</string>
    <string name="reset_password">Reset Password</string>
    <string name="scan_qr">Scan QR</string>
    <string name="generate_bill">Generate Bill</string>
    <string name="add_item">Add Item</string>
    <string name="price">Price</string>
    <string name="register">Register</string>
    <string name="are_you_a_vendor">Are you a vendor?:</string>
    <string name="vendor_id">Vendor ID</string>
    <string name="tabdab">TabDab</string>
    <string name="password">Password</string>
    <string name="register_vendor">Register Vendor</string>
    <string name="last_name">Last Name</string>
    <string name="first_name">First Name</string>
    <string name="edit_account">Edit Account</string>
    <string name="save">Save</string>
    <string name="login">Login</string>
    <string name="clear">Clear</string>
    <string name="done">Done</string>
    <string name="qr_code">QR code</string>
    <string name="remove_menu_item">Remove menu item</string>
    <string name="invalid_user_error">Sign in credentials do not match existing user. Please try again or register if you do not already have an account.</string>
    <string name="email_required">Email Required</string>
    <string name="password_required">Password Required</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="vendor_menu">Vendor Menu</string>
    <string name="cvv">CVV</string>
    <string name="create_bill">Create Bill</string>
    <string name="edit_menu">Edit Menu</string>
...
