...
            android:title="Past Payments" />
        <item
            android:id="@+id/navi_vendor"
            android:icon="@drawable/ic_baseline_vendor"
            android:title="Vendor" />
        <item
            android:id="@+id/navi_setting"
            android:icon="@drawable/ic_settings_background"
            android:title="Settings" />
        <item
            android:id="@+id/navi_exit"
            android:icon="@drawable/ic_baseline_exit"
            android:title="Logout" />
    </group>
</menu>
